--- a/static/style.css
+++ b/static/style.css
@@ -315,3 +315,103 @@ td div {
   display: inline-block;
   white-space: nowrap;
 }
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  background-color: #818181;
+}
+
+nav {
+  height: 60px;
+  background-color: #333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+nav a {
+  color: white;
+  text-decoration: none;
+  margin-right: 20px;
+  position: relative;
+}
+
+nav a::after {
+  content: '     ';
+  display: block;
+  width: 0;
+  height: 2px;
+  background: white;
+  transition: width 0.3s;
+}
+
+td a {
+  color: black;
+}
+
+nav a:hover::after {
+  width: 100%;
+}
+
+.navbar-brand {
+  padding: 30px;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.content {
+  max-width: 1000px;
+  margin: 20px auto;
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+   font-weight: 400;
+    font-family: Copernicus,"Libre Baskerville",Georgia,serif;
+  text-align: center;
+  font-size: 28px;
+  margin-bottom: 20px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+th, td {
+  padding: 10px;
+  text-align: center;
+}
+
+th {
+  
+  background-color: #333;
+  color: white;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+a {
+  color: #ffffff;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+p a { 
+color: black; 
+font-family: Copernicus,"Libre Baskerville",Georgia,serif; 
+}
